Major update: Minecraft 1.21.4, new config screen, support sodium 0.6.x and more
               - Update to mc 1.21.4
               - New config screen using Yet Another Config Lib
               - Remove iris compat mixins (no longer needed)
               - Update translations
               - Temporarily removed entities in the main menu